--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,44 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya + Sans + SC:wght@400;500;800');
+// Font Family 
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700;800;900&display=swap');
+$-ff-body: 'Inter', sans-serif;
+$-ff-specialTitle: 'Dancing Script', cursive;
+// Color 
+$ColorBlack: #000;
+$ColorWhite: #fff;
+$ColorWhite2:#f3f3f3;
+$ColorPrimary: red;
+$SkyBlue:#2EA4FC;
+// Font Width 
+$fw-light: 300;
+$fw-regular: 400;
+$fw-medium: 500;
+$fw-sbold: 600;
+$fw-bold: 700;
+$fw-ebold: 800;
+$fw-black: 900;
+// Font Size 
+$fs-p: 14px;
+$fs-h1: 40px;
+$fs-h2: 36px;
+$fs-h3: 24px;
+$fs-h4: 20px;
+$fs-h5: 16px;
+$fs-h6: 14px;
 
-$-ff-body: 'Alegreya', sans-serif;
-$-ff-p: 'Montserrat', sans-serif;
-$-ff-heading: 'Outfit', sans-serif;
-
-$-common-black: #000;
-$-common-white: #ffffff;
-$-grey-1: #f5f8fb;
-$-heading-primary: #000;
-$-text-body: #888888;
-$-grey-2: #e2ebf4;
-$-theme-primary: #ededed;
-$-text-1: #000;
-$-border-2: #b7c3cf;
-$-border-1: #888888;
-$-fw-normal: normal;
-
-$-fw-elight: 200;
-$-fw-regular: 400;
-$-fw-light: 300;
-$-fw-sbold: 600;
-$-fw-medium: 500;
-$-fw-ebold: 800;
-$-fw-bold: 700;
-$-fw-black: 900;
-
-$-fs-body: 14px;
-$-fs-p: 14px;
-$-fs-h1: 40px;
-$-fs-h2: 36px;
-$-fs-h3: 24px;
-$-fs-h4: 20px;
-$-fs-h5: 16px;
-$-fs-h6: 14px;
-$-bg-red:red;
-p{
-    font-weight: $-fw-black;
-    font-family: $-ff-body;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-h1{
-    background-color: $-bg-red;
+p{
+    margin: 0;
+    padding: 0;
+}
+h1,h2,h3,h4,h5,h6{
+     margin: 0;
+    padding: 0;
+}
+body{
+    font-family: $-ff-body !important;
+}
+
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $ColorWhite;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.preloader-circle {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 5px solid $ColorWhite2;
+  border-top: 5px solid $SkyBlue;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
