--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -48,4 +48,34 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+.landing-content h1 {
+  font-family: "Dancing Script", cursive;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+  color: #EC4899;
+  padding: 50px 0;
+}
+.landing-content .theme-btn {
+  background: #2EA4FC;
+  color: #fff;
+  border: 0;
+  display: block;
+  width: 60%;
+  padding: 15px;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  border-radius: 150px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.landing-bg {
+  height: 500px;
+  background-position: center;
+  background-size: cover;
+  position: fixed;
+  width: 100%;
+  bottom: -90px;
 }/*# sourceMappingURL=index.css.map */
