--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -7,6 +7,7 @@ $ColorBlack: #000;
 $ColorWhite: #fff;
 $ColorWhite2:#f3f3f3;
 $ColorPrimary: red;
+$ColorPink:#EC4899;
 $SkyBlue:#2EA4FC;
 // Font Width 
 $fw-light: 300;
@@ -69,4 +70,39 @@ body{
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+
+// Landing Page 
+.landing-content{
+    h1{
+        font-family: $-ff-specialTitle;
+        text-align: center;
+        font-size: $fs-h1;
+        font-weight: $fw-bold;
+        color: $ColorPink;
+        padding: 50px 0;
+    }
+    .theme-btn {
+        background: $SkyBlue;
+        color: $ColorWhite;
+        border: 0;
+        display: block;
+        width: 60%;
+        padding: 15px;
+        margin: 0 auto;
+        margin-bottom: 15px;
+        border-radius: 150px;
+        text-decoration: none ;
+        text-align: center;
+    }
+}
+
+.landing-bg {
+	height: 500px;
+	background-position: center;
+	background-size: cover;
+	position: fixed;
+	width: 100%;
+	bottom: -90px;
 }
