--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,16 +7,24 @@
 
 p {
   margin: 0;
+  color: #969598;
   padding: 0;
+  font-size: 16px;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
+  color: #010101;
 }
 
 body {
   font-family: "Inter", sans-serif !important;
+}
+
+a {
+  color: #2EA4FC !important;
+  text-decoration: none !important;
 }
 
 #preloader {
@@ -69,4 +77,42 @@ body {
   border-radius: 150px;
   text-decoration: none;
   text-align: center;
+}
+.landing-content .bg-pink {
+  background-color: #EC4899;
+}
+
+input:focus {
+  box-shadow: none !important;
+}
+
+.auth-wrap .auth-title {
+  font-size: 48px;
+}
+.auth-wrap .auth-input {
+  background-color: #fff;
+  border: 0;
+  padding: 20px 50px;
+  border-radius: 100px;
+  width: 100%;
+  box-shadow: 0px 0px 76px rgba(0, 0, 0, 0.07);
+}
+.auth-wrap .auth-form img {
+  top: 19px;
+  position: absolute;
+  left: 25px;
+}
+.auth-wrap .auth-btn {
+  background: #2EA4FC;
+  color: #fff;
+  border: 0;
+  width: 60%;
+  padding: 15px;
+  border-radius: 100px;
+  margin: 0 auto;
+  text-align: center;
+  box-shadow: 0 3px 51px rgba(46, 164, 252, 0.52);
+}
+.auth-wrap label {
+  color: #969598;
 }/*# sourceMappingURL=index.css.map */
