--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -3,12 +3,15 @@
 $-ff-body: 'Inter', sans-serif;
 $-ff-specialTitle: 'Dancing Script', cursive;
 // Color 
+$ColorMenu1:#EC018B;
+$ColorMenu2:#FC6667;
 $ColorBlack: #000;
 $ColorTitle:#010101;
 $ColorWhite: #fff;
 $ColorWhite2:#f3f3f3;
 $ColorPrimary: red;
 $ColorBody:#969598;
+$ColorIcon:#A8AEBA;
 $ColorPink:#EC4899;
 $ColorSkyblue:#2EA4FC;
 // Font Width 
@@ -32,6 +35,9 @@ $fs-h6: 14px;
 // box shadow 
 
 $shadow-1: 0 3px 51px rgb(46,164,252 ,52%);
+.shadow-2{
+    box-shadow: 0 0 76px rgb(0,0,0 ,7%);
+}
 
 *{
     margin: 0;
@@ -156,5 +162,144 @@ input:focus{
     label { 
         color: $ColorBody;
     }
+
+    
+/* Select me  */
+/* Im man woman  */
+.heading {
+    text-align: center;
+    font-size: 0.8em;
 }
 
+.center-align {
+    display: flex;
+    justify-content: start;
+    margin-left: -3px;
+    margin-top: 10px;
+}
+
+.center-align input[type="radio"] {
+    visibility: hidden;
+    height: 0;
+    width: 0;
+}
+
+.label {
+    vertical-align: middle;
+    text-align: center;
+    cursor: pointer;
+    background-color: rgb(233, 9, 249, 30%);
+    color: $ColorWhite;
+    transition: all .3s ease-out;
+    font-size: 18px;
+    font-weight: $fw-medium;
+    border-radius: 8px;
+    border: 0;
+}
+
+.label.man {
+    font-size: $fs-h6;
+    background-color: $ColorWhite !important;
+    border: 4px solid $ColorWhite;
+    padding: 10px;
+    background: #E1E6FF !important;
+    border-radius: 80px;
+    color: #17265C;
+}
+
+input[type="radio"]:checked+.label.man {
+    border: 4px solid $ColorSkyblue;
+    border-radius: 80px;
+    padding: 10px;
+    background: #E1E6FF !important;
+    color: #17265C;
+    font-size: $fs-h6;
+}
+
+.label.woman {
+    background-color: $ColorWhite !important;
+    border: 4px solid $ColorWhite;
+    background: #FFE1F8 !important;
+    border-radius: 80px;
+    padding: 10px;
+    color: #17265C;
+    font-size: $fs-h6;
+}
+
+input[type="radio"]:checked+.label.woman {
+    font-size: $fs-h6;
+    border: 4px solid $ColorPink;
+    border-radius: 80px;
+    background: #FFE1F8 !important;
+    border-radius: 80px;
+    padding: 10px;
+}
+
+
+.auth-input input:focus {
+    box-shadow: none;
+}
+
+.label img {
+    position: relative;
+    margin: 5px 0;
+}
+
+.blueBg {
+    position: relative;
+    display: block;
+}
+
+.blueBg img {
+    z-index: 1;
+	left: 0;
+	top: 0;
+}
+
+.im-title {
+    margin: 0 0 0 auto;
+    font-size: $fs-h5;
+    font-weight:$fw-medium;
+    color: $ColorTitle;
+    margin-right: 20px;
+}
+
+/* Select me end  */
+
+
+
+}
+
+// Header CSS 
+
+.header-wrap{
+    a i{
+        color: $ColorIcon;
+        font-size: 30px;
+    }
+}
+
+// Footer CSS 
+
+.footer-wrap{
+     background-image: linear-gradient(to right, $ColorMenu1 ,$ColorMenu2);
+     
+     a i {
+        font-size: 20px;
+        color: $ColorWhite;
+    }
+    .menu-item{
+        background: transparent;
+        height: 50px;
+        width: 50px;
+        text-align: center;
+        line-height: 50px;
+        border-radius: 100px;
+    }
+    .menu-item.active{
+        background-color: $ColorWhite !important;
+        i{
+            color: $ColorSkyblue;
+        }
+    }
+}
