Match real Main Slider for todays match done as ui

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -254,9 +254,24 @@ input:focus {
   margin-bottom: 120px;
 }
 
+.card-bg-1 {
+  background-image: linear-gradient(to bottom right, #67D6F0, #549DF0);
+}
+
+.card-bg-2 {
+  background-image: linear-gradient(to bottom right, #50A4FE, #EC4899);
+}
+
+.card-bg-3 {
+  background-image: linear-gradient(to bottom right, #5CD6E9, #6713FA);
+}
+
+.card-bg-4 {
+  background-image: linear-gradient(to bottom right, #FEED50, #48ECDC);
+}
+
 .tinder {
-  width: 100vw;
-  height: 100vh;
+  height: 700px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -301,27 +316,23 @@ input:focus {
 
 .tinder--cards {
   flex-grow: 1;
-  padding-top: 40px;
   text-align: center;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  z-index: 1;
+  align-items: flex-start;
 }
 
 .tinder--card {
   display: inline-block;
-  width: 90vw;
+  width: 100%;
   max-width: 400px;
-  height: 70vh;
-  background: #FFFFFF;
-  padding-bottom: 40px;
-  border-radius: 8px;
   overflow: hidden;
   position: absolute;
   will-change: transform;
   transition: all 0.3s ease-in-out;
   cursor: grab;
+  border-radius: 40px;
+  padding: 10px;
 }
 
 .moving.tinder--card {
@@ -334,17 +345,19 @@ input:focus {
   pointer-events: none;
 }
 
-.tinder--card h3 {
-  margin-top: 32px;
-  font-size: 32px;
-  padding: 0 16px;
-  pointer-events: none;
+.tinder--user-info {
+  pointer-events: inherit;
+  padding: 20px 0;
 }
-
-.tinder--card p {
-  margin-top: 24px;
-  font-size: 20px;
-  padding: 0 16px;
+.tinder--user-info h3 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #fff;
+  pointer-events: inherit !important;
+}
+.tinder--user-info p {
+  font-size: 16px;
+  color: #fff;
   pointer-events: none;
 }
 
@@ -379,4 +392,12 @@ input:focus {
 
 .fa-remove {
   color: #CDD6DD;
+}
+
+.tinder--user-dp {
+  background-size: cover;
+  background-position: top;
+  height: 500px;
+  border-radius: 40px;
+  pointer-events: none;
 }/*# sourceMappingURL=index.css.map */
