--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -400,4 +400,18 @@ input:focus {
   height: 500px;
   border-radius: 40px;
   pointer-events: none;
+}
+
+.spotlight-btn {
+  background: #FCC52E;
+  text-align: center;
+  border-radius: 50px;
+  padding: 10px;
+  margin-top: 15px;
+}
+.spotlight-btn p {
+  color: #fff;
+}
+.spotlight-btn p span {
+  text-align: right;
 }/*# sourceMappingURL=index.css.map */
