--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -472,3 +472,20 @@ input[type="radio"]:checked+.label.woman {
 	border-radius: 40px;
     pointer-events: none;
 }
+
+// My Matches Page 
+
+.spotlight-btn {
+	background: #FCC52E;
+	text-align: center;
+	border-radius: 50px;
+	padding: 10px;
+	margin-top: 15px;
+    p{
+        color: $ColorWhite;
+        span{
+            text-align: right;
+            // animition 
+        }
+    }
+}
