--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -485,7 +485,7 @@ input[type="radio"]:checked+.label.woman {
         color: $ColorWhite;
         span{
             text-align: right;
-            // animition 
+            // animition s
         }
     }
 }
