--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,6 +3,10 @@
   box-shadow: 0 0 76px rgba(0, 0, 0, 0.07);
 }
 
+.shadow-3 {
+  box-shadow: 0 3px 49px rgba(252, 197, 46, 0.43);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -403,7 +407,7 @@ input:focus {
 }
 
 .spotlight-btn {
-  background: #FCC52E;
+  background-image: linear-gradient(to bottom, #FCC52E, #FFD765);
   text-align: center;
   border-radius: 50px;
   padding: 10px;
@@ -414,4 +418,16 @@ input:focus {
 }
 .spotlight-btn p span {
   text-align: right;
+}
+
+.user-dp-v2 {
+  height: 300px;
+}
+
+.tinder-suer-interaction {
+  padding-bottom: 30px;
+}
+.tinder-suer-interaction button {
+  background: none;
+  border: none;
 }/*# sourceMappingURL=index.css.map */
