--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -38,6 +38,10 @@ $shadow-1: 0 3px 51px rgb(46,164,252 ,52%);
 .shadow-2{
     box-shadow: 0 0 76px rgb(0,0,0 ,7%);
 }
+.shadow-3{
+    box-shadow: 0 3px 49px rgb(252,197,46 ,43%);
+}
+
 
 *{
     margin: 0;
@@ -476,7 +480,7 @@ input[type="radio"]:checked+.label.woman {
 // My Matches Page 
 
 .spotlight-btn {
-	background: #FCC52E;
+    background-image: linear-gradient(to bottom,#FCC52E, #FFD765);
 	text-align: center;
 	border-radius: 50px;
 	padding: 10px;
@@ -485,7 +489,19 @@ input[type="radio"]:checked+.label.woman {
         color: $ColorWhite;
         span{
             text-align: right;
-            // animition s
+            // animition
         }
+    }
+}
+
+.user-dp-v2 {
+	height: 300px;
+}
+
+.tinder-suer-interaction {
+    padding-bottom: 30px;
+    button{
+        background: none;
+        border:none
     }
 }
