--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -528,3 +528,8 @@ input[type="radio"]:checked+.label.woman {
         color: $ColorWhite;
     }
 }
+
+#back-button{    
+    background: none;
+    border: 0;    
+}
