--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -281,6 +281,19 @@ input[type="radio"]:checked+.label.woman {
         color: $ColorIcon;
         font-size: 30px;
     }
+    .notification-item {
+        position: relative;
+    }
+    .notification-item:after {
+        position: absolute;
+        height: 10px;
+        width: 10px;
+        background: $ColorSkyblue;
+        content: '';
+        right: 5px;
+        border-radius: 50px;
+        top: -10px;
+    }
 }
 
 // Footer CSS 
