--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -641,3 +641,67 @@ input[type="radio"]:checked+.label.woman {
     }
 }
 
+// Dashboard Page 
+.dashboard-wrap{
+    .edit-profile {
+        position: relative;
+        z-index: 2;
+        text-align: right;
+        i{
+            background: $ColorWhite;
+            display: inline-block;
+            margin-top: 10px;
+            margin-right: 10px;
+            height: 30px;
+            width: 30px;
+            border-radius: 50px;
+            line-height: 30px;
+            text-align: center;
+            color: $ColorSkyblue;
+        }
+    }
+    .dashboard-user-dp {
+        height: 170px;
+        width: 170px;
+        background-position: top;
+        background-size: cover;
+        border-radius: 100px;
+        border: 3px solid $ColorWhite;
+        margin: 0 auto;  
+        z-index: 2;
+        position: relative;
+    }
+    .dashboard-header{
+        background-size: cover;
+        background-position:top;
+        height: 350px;
+    }
+    .dashboard-user-info {
+        h3{
+            padding-top: 10px;
+            color:$ColorWhite;
+            padding-bottom: 5px;
+            z-index: 2;
+            position: relative;
+        }
+        p{
+            color: $ColorWhite;  
+            z-index: 2;
+            position: relative;
+        }
+    }
+        
+    .dashboard-header {
+        position: relative;
+    }
+    .dashboard-header:after {
+        position: absolute;
+        content: '';
+        background-image: linear-gradient(to right, rgb(236,3,132,72%) , rgb(251,98,105,72%));
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+}
