--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -351,6 +351,30 @@ input:focus {
 .auth-wrap label {
   color: #969598;
 }
+.auth-wrap .upload-dp-and-preview {
+  height: 345px;
+  width: 345px;
+  background-position: top;
+  background-size: cover;
+  margin: 0 auto;
+  margin-bottom: 0px;
+  border-radius: 100%;
+  margin-bottom: 60px;
+  position: relative;
+}
+.auth-wrap .upload-dp-and-preview button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border: 0;
+  height: 90px;
+  width: 90px;
+  border-radius: 50px;
+  font-size: 60px;
+  box-shadow: 0 3px 51px #2EA4FC;
+}
 .auth-wrap .heading {
   text-align: center;
   font-size: 0.8em;
