--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -329,6 +329,11 @@ div[age_range_slider]>input[type=range]::-ms-tooltip {
 .search-innerItemDropdown-wrap select:focus{
     box-shadow: none !important;
 }
+
+// Select form end 
+
+
+
 .widget-card {
 	background-color: $ColorWhite3;
 	border-radius: 8px;
@@ -406,6 +411,32 @@ input:focus{
         color: $ColorBody;
     }
 
+    // Upload User dp 
+
+    .upload-dp-and-preview{
+        height: 345px;
+        width: 345px;
+        background-position: top;
+        background-size: cover;
+        margin: 0 auto;
+        margin-bottom: 0px;
+        border-radius: 100%;
+        margin-bottom: 60px;
+        position: relative;
+        button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: $ColorWhite;
+            border: 0;
+            height: 90px;
+            width: 90px;
+            border-radius: 50px;
+            font-size: 60px;
+            box-shadow: 0 3px 51px $ColorSkyblue;
+        }
+    }
     
 /* Select me  */
 /* Im man woman  */
