--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -438,6 +438,28 @@ input:focus{
         }
     }
     
+    // .acc-complete {
+    //     height: 500px;
+    //     width: 100%;
+    //     background-size: cover;
+    //     background-position: center;
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    // }
+
+    .account-complete-wrap {
+	    text-align: center;
+        h1{
+            font-family: "Dancing Script", cursive;
+            font-weight: bold;
+            font-size: 78px;
+            color: #FCC52E;
+            margin-bottom: 20px;
+            margin-top: 10px;
+        }
+    }
+
 /* Select me  */
 /* Im man woman  */
 .heading {
